white overflow fix but bouncy

--- a/website/src/App.css
+++ b/website/src/App.css
@@ -1,13 +1,10 @@
 @import url("https://rsms.me/inter/inter.css");
 
-html {
-  overflow: hidden;
-  height: 100%;
-}
-
 body {
   height: 100%;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
+  background-color: var(--dark-two);
 }
 
 * {
